# Course-Enrollment-Platform-API

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  progress.md  pyproject.toml  render.yaml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_bonus_features.py
app/: main.py
app/core/: config.py  database.py  deps.py  rate_limit.py  security.py
app/models/: __init__.py  audit_log.py  course.py  enrollment.py  user.py
app/nisab learning page/: friday.html
app/repositories/: __init__.py  audit_log.py  course.py  enrollment.py  user.py
app/routers/: __init__.py  admin.py  auth.py  courses.py  enrollments.py  users.py
app/schemas/: __init__.py  audit_log.py  auth.py  course.py  enrollment.py
app/services/: __init__.py  auth.py  course.py  enrollment.py
tests/: conftest.py  test_admin.py  test_auth_and_users.py  test_bonus_features.py  test_courses.py  test_enrollments.py
